istio-system/istio-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/hostname: kiali.youlearn.link
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
  name: istio-ingress
spec:
  rules:
  - host: kiali.youlearn.link
    http:
      paths: 
      - backend:
          serviceName: kiali
          servicePort: 20001
        path: /*
